--- a/projects/to_do_app/about.html
+++ b/projects/to_do_app/about.html
@@ -10,24 +10,25 @@
       <header>
          <nav>
             <ol>
-               <li><a href="/">Home</a></li>
-               <li><a href="/settings">Settings</a></li>
-               <li><a href="/about">About</a></li>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="settings.html">Settings</a></li>
+               <li><a href="about.html">About</a></li>
             </ol>
          </nav>
       </header>
       <main>
          <h1>About Section</h1>
          <p>This is a dummy page that should have some info about the website. However, I'm lazy 
-         and I don't want to write any thing. I guess this is enough for a single small paragraph.</p>
+         and I don't want to write any thing. I guess this is enough for a single small paragraph.
+         Well I guess this is not enough of a paragraph becuase the text is too small.</p>
       </main>
       <footer>
        <p>&copy; 2025 My Website. All rights reserved.</p>
        <nav>
          <ul>
-           <li><a href="/privacy">Privacy Policy</a></li>
-           <li><a href="/terms">Terms of Service</a></li>
-           <li><a href="/contact">Contact Us</a></li>
+           <li><a href="">Privacy Policy</a></li>
+           <li><a href="">Terms of Service</a></li>
+           <li><a href="">Contact Us</a></li>
          </ul>
        </nav>
      </footer>
