--- a/projects/to_do_app/about.html
+++ b/projects/to_do_app/about.html
@@ -5,6 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>tasks</title>
       <link href="style.css" rel="stylesheet">
+      <script src="main.js" onload="applyFontSize()">
+      </script>
    </head>
    <body>
       <header>
