feat: spesify the order of the tab button

--- a/projects/to_do_app/index.html
+++ b/projects/to_do_app/index.html
@@ -25,8 +25,8 @@
       </header>
       <main>
          <div id="inputBox">
-            <input type="text" id="taskInput" placeholder="type your task">
-            <button id="addButton" accesskey="Enter">Add</button><br>
+            <input type="text" id="taskInput" placeholder="type your task" tabindex="1">
+            <button id="addButton" accesskey="Enter" tabindex="2">Add</button><br>
             <script>
                const taskInput = document.getElementById('taskInput');
                const addButton = document.getElementById('addButton');
