feat: make the wrapper and apply it to the content

--- a/projects/to_do_app/about.html
+++ b/projects/to_do_app/about.html
@@ -18,7 +18,7 @@
             </ul>
          </nav>
       </header>
-      <main>
+      <main class="wrapper">
          <h1>About Section</h1>
          <p>This is a dummy page that should have some info about the website. However, I'm lazy 
          and I don't want to write any thing. I guess this is enough for a single small paragraph.
