--- a/projects/to_do_app/settings.html
+++ b/projects/to_do_app/settings.html
@@ -31,12 +31,16 @@
             </ul>
          </nav>
       </header>
-      <main>
-         <h1>Settings</h1>
-         <h2>Font size</h2>
-         <input type="range" min="10" max="50" step="0.5" id="fontSize"
-            oninput="setFontSize(this.value)"><br>
-         <button type="rest" onclick="setFontSize(20)">rest to defaluts</button>
+      <main class="wrapper">
+         <section class="section">
+            <h1>Settings</h1>
+            <div class="section" data-width="narrow">
+               <h2>Font size</h2>
+               <input type="range" min="10" max="50" step="0.5" id="fontSize"
+                  oninput="setFontSize(this.value)">
+            </div>
+            <button type="rest" onclick="setFontSize(20)">rest to defaluts</button>
+         </section>
       </main>
    </body>
 </html>
